add: login and material components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     ],
     "paths": {
       "@models/*": ["src/app/models/*"]
-    }
+    },
+    "strictPropertyInitialization": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
