--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "dom"
     ],
     "paths": {
-      "@models/*": ["src/app/models/*"]
+      "@models/*": ["src/app/models/*"],
+      "@services/*": ["src/app/services/*"]
     },
     "strictPropertyInitialization": false
   },
