chore: fix breadcrumbs.service.ts typings

--- a/angular.json
+++ b/angular.json
@@ -78,7 +78,10 @@
               "browserTarget": "adminka_na_kolenke:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "ssl": true
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
