fix: rebuilt routers and breadcrumbs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     ],
     "paths": {
       "@models/*": ["src/app/models/*"],
-      "@services/*": ["src/app/services/*"]
+      "@services/*": ["src/app/services/*"],
+      "@misc*": ["src/app/misc/*"]
     },
     "strictPropertyInitialization": false
   },
